--- a/testCamelSpringJms/src/main/resource/camel.properties
+++ b/testCamelSpringJms/src/main/resource/camel.properties
@@ -16,4 +16,4 @@
 ## ------------------------------------------------------------------------
 
 # properties for the application
-jms.url=failover\:(tcp\://10.210.90.48\:61616,tcp\://10.210.91.246\:61616)
+jms.url=failover\:(tcp\://10.133.12.20\:61616,tcp\://10.133.12.58\:61616,tcp\://10.133.12.59\:61616)
