--- a/testCamelSpringJms/src/main/resource/log4j.properties
+++ b/testCamelSpringJms/src/main/resource/log4j.properties
@@ -1,24 +1,7 @@
-## ------------------------------------------------------------------------
-## Licensed to the Apache Software Foundation (ASF) under one or more
-## contributor license agreements.  See the NOTICE file distributed with
-## this work for additional information regarding copyright ownership.
-## The ASF licenses this file to You under the Apache License, Version 2.0
-## (the "License"); you may not use this file except in compliance with
-## the License.  You may obtain a copy of the License at
-##
-## http://www.apache.org/licenses/LICENSE-2.0
-##
-## Unless required by applicable law or agreed to in writing, software
-## distributed under the License is distributed on an "AS IS" BASIS,
-## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-## See the License for the specific language governing permissions and
-## limitations under the License.
-## ------------------------------------------------------------------------
-
 #
 # The logging properties used
 #
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout,A1
 
 # uncomment the next line to debug Camel
 #log4j.logger.org.apache.camel=DEBUG
@@ -26,4 +9,11 @@ log4j.rootLogger=INFO, stdout
 # CONSOLE appender not used by default
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d [%-15.15t] %-5p %-30.30c{1} - %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}][%p] %m %n
+
+log4j.appender.A1 = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.A1.File = logs/test.log
+log4j.appender.A1.Append = true
+log4j.appender.A1.Threshold = DEBUG
+log4j.appender.A1.layout = org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern =[%d{yyyy-MM-dd HH\:mm\:ss}][%p] %m %n
