--- a/testCamelSpringJms/src/main/resource/log4j.properties
+++ b/testCamelSpringJms/src/main/resource/log4j.properties
@@ -1,7 +1,7 @@
 #
 # The logging properties used
 #
-log4j.rootLogger=INFO, stdout,A1
+log4j.rootLogger=DEBUG, stdout,A1
 
 # uncomment the next line to debug Camel
 #log4j.logger.org.apache.camel=DEBUG
